# beatme

./: PRD.md  README.md  com.gautam.beatme.desktop  index.html  install.sh  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  inhibitor.rs  lib.rs  shutdown.rs  window.rs
src/components/: ConfirmationDialog.tsx  Heatmap.tsx  HistoryList.tsx  ReflectionEditor.tsx  ReflectionViewer.tsx  SettingsModal.tsx  Sidebar.tsx  StatsCard.tsx
src/db/: database.ts
src/pages/: History.tsx  Home.tsx  Statistics.tsx  Welcome.tsx
src/services/: AutostartService.ts  NotificationService.ts
src/stores/: useReflectionsStore.ts  useSettingsStore.ts  useStatsStore.ts  useUiStore.ts
src/styles/: index.css
src/types/: index.ts
src/utils/: date.ts
testsprite_tests/: standard_prd.json  testsprite_frontend_test_plan.json
testsprite_tests/tmp/: code_summary.yaml
testsprite_tests/tmp/prd_files/: BeatMe_PRD.md
