[package]
name = "BeatMe"
version = "0.1.0"
description = "Daily reflection and beat tracking app"
authors = ["Gautam"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
zbus = { version = "5.18.0", features = ["async-io"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
chrono = { version = "0.4.45", features = ["clock", "serde"] }
futures-util = "0.3.33"
tokio = { version = "1.35.0", features = ["rt", "time"] }


